--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
+lofty = "0.15.0"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.105"
