--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 actix-files = "0.6.2"
 actix-web = "4.3.1"
+base64 = "0.21.4"
 lofty = "0.15.0"
 md5 = "0.7.0"
 r2d2 = "0.8.10"
