--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 actix-files = "0.6.2"
 actix-web = "4.3.1"
 base64 = "0.21.4"
+configparser = "3.0.3"
 lofty = "0.15.0"
 md5 = "0.7.0"
 r2d2 = "0.8.10"
