--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "loklang"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 [dependencies]
 actix-files = "0.6.2"
@@ -17,3 +18,5 @@ rusqlite = { version = "0.29.0", features = ["bundled"] }
 rust-embed = { version = "8.5.0", features = ["actix"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
+actix-cors = "0.7.0"
+
